--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,5 +1,6 @@
 name: Node.js CI
 
+
 on:
   push:
     branches: [ main ]
@@ -22,6 +23,10 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+
+    - name: Coveralls GitHub Action
+      uses: coverallsapp/github-action@v2.3.4
+            
 
     - name: Install dependencies
       run: npm install
