--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,11 +1,10 @@
 name: Node.js CI
 
-
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   test:
@@ -13,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [18.x]
 
     steps:
     - name: Checkout repository
@@ -23,10 +22,6 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-
-    - name: Coveralls GitHub Action
-      uses: coverallsapp/github-action@v2.3.4
-            
 
     - name: Install dependencies
       run: npm install
@@ -38,6 +33,6 @@ jobs:
       run: npm run coverage
 
     - name: Upload coverage to Coveralls
-      run: npm run coverage-report
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+      run: npm run coverage-report
