--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
-node_modules
-coverage*
-.nyc_output
+# Ignore node_modules
+node_modules/
+
+# Ignore coverage folders and reports
+coverage/
+coverage.*
+.nyc_output/
+
+# Ignore logs and temp files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
