create unit test for toString.js

--- a/.nycrc
+++ b/.nycrc
@@ -1,5 +1,5 @@
 {
-  "include": ["src/add.js", "src/capitalize.js", "src/ceil.js", "src/difference.js", "src/endsWith.js", "src/filter.js"],
+  "include": ["src/add.js", "src/capitalize.js", "src/ceil.js", "src/difference.js", "src/endsWith.js", "src/filter.js", "src/toString.js"],
   "exclude": ["node_modules", "src/.internal", "coverage", "test"],
   "reporter": ["lcov", "text"],
   "all": true,
